--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
             </table>
             
     </div>
-    <footer>
-        <h3>contact us</h6>
-        <div>
-        Phone:9876543210 &nbsp &nbsp &nbsp;
-        E-mail:sruthi2348@gmail.com &nbsp &nbsp;
+    <footer class="st">
+        <div class="s1">
+           <h3>contact us</h3>
+           Phone:9876543210 &nbsp &nbsp &nbsp;
+           E-mail:sruthi2348@gmail.com &nbsp &nbsp;
         </div>
     </footer>
 
